--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,21 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <h1>Example title</h1>
+    <h1>Meow Clicker</h1>
+    <p>You have <span id="meow-count">0</span> meows.</p>
+    <button id="meow-button">Click Me!</button>
+
+    <div id="shop">
+        <h2>Shop</h2>
+        <div class="shop-item">
+            <p>Upgrade: +1 meow per click (Cost: 10 meows)</p>
+            <button id="upgrade-button">Buy Upgrade</button>
+        </div>
+    </div>
+
+
+
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/example.html"></include> -->
   </body>
 </html>
